updated controller and tests to cover 500 error